--- a/index.html
+++ b/index.html
@@ -1,17 +1,17 @@
 <!doctype html>
-<html lang="en">
+<html lang="id">
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>HPJ TKJ: Latihan</title>
+    <title id="title-web">Title Web</title>
     <link rel="stylesheet" href="/assets/style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
   </head>
-  <body>
+  <body class="bg-dark" data-bs-theme="dark">
     <div class="fixed-top">
       <!-- navbar -->
-      <nav class="navbar navbar-expand-lg bg-body-tertiary navbar-dark" data-bs-theme="dark">
+      <nav class="navbar navbar-expand-lg bg-body-tertiary navbar-dark">
         <div class="container-fluid">
 
           <!-- logo -->
@@ -39,11 +39,10 @@
                   Hiburan
                 </a>
                 <ul class="dropdown-menu dropdown-menu-end">
-                  <li><p class="dropdown-item-text h4 m-0">Film</p></li>
-                  <li><a class="dropdown-item" href="#">Action</a></li>
-                  <li><a class="dropdown-item" href="#">Another action</a></li>
-                  <li><hr class="dropdown-divider"></li>
-                  <li><a class="dropdown-item" href="#">Something else here</a></li>
+                  <li><p class="dropdown-item-text h4 m-0">Anime</p></li>
+                  <li><a class="dropdown-item" href="/anime/darling-in-the-franxx/">Darling In The FranXX</a></li>
+                  <!-- <li><hr class="dropdown-divider"></li> -->
+                  <!-- <li><a class="dropdown-item" href="#">Something else here</a></li> -->
                 </ul>
               </li>
               <li class="nav-item">
@@ -55,11 +54,59 @@
       </nav>
     </div>
 
-    <div class="container-fluid d-flex justify-content-center align-items-center" style="height: 100vh;background: linear-gradient(rgba(var(--preset-dark-rgb),0.5),rgba(var(--preset-dark-rgb),0.5)),var(--background-header);background-repeat: no-repeat;background-position: center;background-size: cover;">
+    <div class="container-fluid d-flex justify-content-center align-items-center" style="height: 90vh;background: linear-gradient(rgba(var(--preset-dark-rgb),0.5),rgba(var(--preset-dark-rgb),0.5)),var(--background-header);background-repeat: no-repeat;background-position: center;background-size: cover;">
       <h1 class="text-white text-center">Teknik Komputer Jaringan</h1>
     </div>
-    
+
+    <div class="container-xl my-5">
+      <p class="mb-3"><span class="h3">SMK Katolik St. Louis Surabaya</span>, juga dikenal sebagai SMK Sinlui, adalah sebuah sekolah menengah kejuruan swasta yang terletak di Kota Surabaya, Jawa Timur. Sekolah ini terletak di Jl. Tidar No. 117, Sawahan, Surabaya. SMK St. Louis Surabaya menawarkan berbagai program kejuruan dengan 6 konsentrasi berbeda. Sekolah ini adalah milik yayasan dan berfokus pada pendidikan tingkat menengah kejuruan. Dalam hal administrasi, SMK St. Louis Surabaya berada di bawah Kantor Dinas Pendidikan di Jawa Timur, Cabang Utama Surabaya. Terdapat 6 program studi yang dapat dipilih sesuai dengan minat dan bakat calon siswa. Program Studi yang dapat dipilih ialah Teknik Sepeda Motor - TSM, Teknik Pemesinan - TPM, Teknik Audio Video - TAV, Teknik Kendaraan Ringan Otomotif - TKR, Teknik Komputer Jaringan - TKJ, serta Multi Media - MM, yang sekarang menjadi Desain Komunikasi Visual - DKV.</p>
+      <h3>Visi:</h3>
+      <p class="mb-3">"Terwujudnya Lulusan yang kompeten dibidangnya dan berkarakter Vinsensian : Disiplin, Jujur, dan Peduli Pada Sesama"</p>
+      <h3>Misi:</h3>
+      <ul class="mb-3">
+        <li>Mendampingi dan membimbing siswa untuk menjadi manusia yang beriman, berkepribadian, berbudi luhur sesuai dengan karakter Vinsensian.</li>
+        <li>Mendampingi peserta didik dalam mengembangkan pengetahuan, keterampilan dan sikap untuk mencapai keunggulan kompetensi.</li>
+        <li>Melaksanakan perbaikan berkelanjutan dengan menerapkan sistem manajemen mutu.</li>
+        <li>Menciptakan lingkungan yang aman, bersih, hijau, teratur dan sehat.</li>
+      </ul>
+      <h3>Nilai Nilai Yang Di Terapkan:</h3>
+      <ol class="mb-3">
+        <li>
+          Kerendahan Hati
+          <ul>
+            <li>Nilai Budaya dan Karakter Kristiani  Vinsensian dalam Kerendahan hati: Bergantung pada Allah, percaya pada Penyelenggaraan Ilahi, Mengakui kelebihan dan kekurangan orang lain dan diri sendiri, mengakui kesalahan dan memperbaiki, kerjasama, melayani.</li>
+          </ul>
+        </li>
+        <li>
+          Kesederhanaan
+          <ul>
+            <li>Jujur dalam berkata dan bertindak, tulus dan bijaksana, hidup hemat, komunikasi dengan sederhana dan mudah dimengerti, solider, menghargai pendapat dan perbedaan, kerapian berbusana, dll.</li>
+          </ul>
+        </li>
+        <li>
+          Kelemah Lembutan
+          <ul>
+            <li>Toleransi, saling menghargai, meneguhkan, cinta damai, kerja keras, disiplin, tanggungjawab,  bersahabat, pemaaf, ramah, sopan santu, tegas, adil dan berprinsip, peduli dengan sesama.</li>
+          </ul>
+        </li>
+        <li>
+          Mati Raga
+          <ul>
+            <li>Mengendalikan diri, Berani berkorban, Memberi waktu untuk berdoa, Belajar dengan rajin dan tekun, Taat pada peraturan, Menghargai orang tua, guru dan sesama, Menggunakan alat komunikasi dengan benar.</li>
+          </ul>
+        </li>
+        <li>
+          Menyelamatkan Jiwa
+          <ul>
+            <li>Rajin Berdoa, Mencintai Sabda Allah dan melaksanakannya, Meyakini bahwa Allah hadir dalam diri sesame, Cinta Damai – saling mengampuni, Penuh kasih, Setia dalam melayani, Bertobat – memperbaiki diri terus menerus, Saling menghormati, menghargai dll,</li>
+          </ul>
+        </li>
+      </ol>
+    </div>
+
+    <footer></footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+    <script src="/assets/script.js"></script>
   </body>
 </html>
