--- a/404.html
+++ b/404.html
@@ -1,11 +1,41 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>404 Page Not Found</title>
+  <style>
+    * {
+      margin: 0;
+      padding: 0;
+    }
+
+    body {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      height: 100vh;
+    }
+
+    #url {
+      color: rgb(100, 100, 100);
+    }
+  </style>
 </head>
+
 <body>
-  
+  <div class="group">
+    <div class="text">
+      <h1>404 Page Not Found</h1>
+      <p>You trying to access "<span id="url">{fetching url}</span>" but its not found on our server.</p>
+    </div>
+  </div>
+
+  <script>
+    document.getElementById('url').innerText = window.location.pathname;
+  </script>
 </body>
+
 </html>
