Adding Anime SPY X FAMILY

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                   Hiburan
                 </a>
                 <ul class="dropdown-menu dropdown-menu-end">
-                  <li><p class="dropdown-item-text h4 m-0">Anime</p></li>
+                  <li><a class="dropdown-item h4 m-0" href="/anime">Anime</a></li>
                   <li><a class="dropdown-item" href="/anime/darling-in-the-franxx/">Darling In The FranXX</a></li>
                   <!-- <li><hr class="dropdown-divider"></li> -->
                   <!-- <li><a class="dropdown-item" href="#">Something else here</a></li> -->
