--- a/anime/darling-in-the-franxx/index.html
+++ b/anime/darling-in-the-franxx/index.html
@@ -12,44 +12,13 @@
     <div class="fixed-top">
       <!-- navbar -->
       <nav class="navbar navbar-expand-lg bg-body-tertiary navbar-dark">
-        <div class="container-fluid">
-
+        <div class="container-fluid d-flex justify-content-center">
           <!-- logo -->
           <a class="navbar-brand" href="/">
             <img src="/assets/favicon.png" class="object-fit-contain object-position-center" style="height: 100%;" alt="Logo" width="30" height="24">
-            <span class="navbar-brand ms-2">SMK Katolik St Louis</span>
+            <span class="navbar-brand ms-4">SMK Katolik St Louis</span>
+            <img src="/assets/osis.png" class="object-fit-contain object-position-center" style="height: 100%;" alt="Logo" width="30" height="24">
           </a>
-
-          <!-- mobile view -->
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-
-          <!-- default menu -->
-          <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-              <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="/">Home</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link disabled" href="/">Info</a>
-              </li>
-              <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                  Hiburan
-                </a>
-                <ul class="dropdown-menu dropdown-menu-end">
-                  <li><p class="dropdown-item-text h4 m-0">Anime</p></li>
-                  <li><a class="dropdown-item" href="/anime/darling-in-the-franxx/">Darling In The FranXX</a></li>
-                  <!-- <li><hr class="dropdown-divider"></li> -->
-                  <!-- <li><a class="dropdown-item" href="#">Something else here</a></li> -->
-                </ul>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link disabled" href="/">About</a>
-              </li>
-            </ul>
-          </div>
         </div>
       </nav>
     </div>
