Adding Spy X Family On Navbar
i forgot to adding spy x family on navbar dropdown

--- a/anime/index.html
+++ b/anime/index.html
@@ -39,7 +39,7 @@
         <div class="card-body">
           <h5 class="card-title">SPY X FAMILY</h5>
           <p class="card-text">Untuk Saat Ini Subtitle Hanya Tersedia Versi Bahasa Inggris</p>
-          <a href="./spy-x-family/" class="btn btn-primary disabled">Nonton</a>
+          <a href="./spy-x-family/" class="btn btn-primary">Nonton</a>
         </div>
       </div>
     </div>
