--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
                 <ul class="dropdown-menu dropdown-menu-end">
                   <li><a class="dropdown-item h4 m-0" href="/anime">Anime</a></li>
                   <li><a class="dropdown-item" href="/anime/darling-in-the-franxx/">Darling In The FranXX</a></li>
+                  <li><a class="dropdown-item" href="/anime/spy-x-family/">Spy × Family</a></li>
                   <!-- <li><hr class="dropdown-divider"></li> -->
                   <!-- <li><a class="dropdown-item" href="#">Something else here</a></li> -->
                 </ul>
