Adding More Information On Website
Adding Footer On Main Page
Adding Background And Change Text On Anime Page
Adding Info Page
Adding About Page
Changing Scroll Behavior To Smooth

--- a/anime/index.html
+++ b/anime/index.html
@@ -23,8 +23,9 @@
       </nav>
     </div>
 
-    <div class="container-fluid d-flex justify-content-center align-items-center" style="height: 90vh;background: linear-gradient(rgba(var(--preset-dark-rgb),0.5),rgba(var(--preset-dark-rgb),0.5)),var(--background-header);background-repeat: no-repeat;background-position: center;background-size: cover;">
-      <h1 class="text-white text-center">Teknik Komputer Jaringan</h1>
+    <div class="container-fluid d-flex justify-content-center align-items-center flex-column" style="height: 90vh;background: linear-gradient(rgba(var(--preset-dark-rgb),0.5),rgba(var(--preset-dark-rgb),0.5)),url(/assets/bg-anime.jpg);background-repeat: no-repeat;background-position: center;background-size: cover;">
+      <h1 class="text-white text-center">ANIME</h1>
+      <h2 class="text-white text-center"></h2>
     </div>
 
     <div class="container-xl my-5">
