--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 <a class="nav-link active" aria-current="page" href="/">Home</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link disabled" href="/">Info</a>
+                <a class="nav-link" href="/info/">Info</a>
               </li>
               <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
@@ -47,7 +47,7 @@
                 </ul>
               </li>
               <li class="nav-item">
-                <a class="nav-link disabled" href="/">About</a>
+                <a class="nav-link" href="/tentang/">Tentang</a>
               </li>
             </ul>
           </div>
@@ -55,8 +55,8 @@
       </nav>
     </div>
 
-    <div class="container-fluid d-flex justify-content-center align-items-center" style="height: 90vh;background: linear-gradient(rgba(var(--preset-dark-rgb),0.5),rgba(var(--preset-dark-rgb),0.5)),var(--background-header);background-repeat: no-repeat;background-position: center;background-size: cover;">
-      <h1 class="text-white text-center">Teknik Komputer Jaringan</h1>
+    <div class="container-fluid d-flex justify-content-center align-items-center flex-column" style="height: 90vh;background: linear-gradient(rgba(var(--preset-dark-rgb),0.5),rgba(var(--preset-dark-rgb),0.5)),var(--background-header);background-repeat: no-repeat;background-position: center;background-size: cover;">
+      <h1 class="text-white text-center">SMK Katolik St. Louis Surabaya</h1>
     </div>
 
     <div class="container-xl my-5">
@@ -105,7 +105,30 @@
       </ol>
     </div>
 
-    <footer></footer>
+    <footer class="container-fluid d-flex flex-wrap justify-content-around px-3 py-4 bg-body-secondary">
+      <div>
+        <h5>KONSENTRASI KEAHLIAN</h5>
+        <ul class="list-unstyled">
+          <li><a href="https://smkstlouis.sch.id/program-studi/tkjsinlui" target="_blank" rel="noopener" class="text-decoration-none">TKJ - Teknik Komputer Jaringan</a></li>
+          <li><a href="https://smkstlouis.sch.id/program-studi/multimedia/" target="_blank" rel="noopener" class="text-decoration-none">DKV - Desain Komunikasi Visual</a></li>
+          <li><a href="https://smkstlouis.sch.id/program-studi/teknik-audio-video/" target="_blank" rel="noopener" class="text-decoration-none">TAV - Teknik Audio Video</a></li>
+          <li><a href="https://smkstlouis.sch.id/program-studi/teknik-pemesinan/" target="_blank" rel="noopener" class="text-decoration-none">TPM - Teknik Pemesinan</a></li>
+          <li><a href="https://smkstlouis.sch.id/program-studi/teknik-kendaraan-ringan/" target="_blank" rel="noopener" class="text-decoration-none">TKR - Teknik Kendaraan Ringan</a></li>
+          <li><a href="https://smkstlouis.sch.id/program-studi/teknik-bisnis-sepeda-motor/" target="_blank" rel="noopener" class="text-decoration-none">TSM - Teknik Sepeda Motor</a></li>
+        </ul>
+      </div>
+      <div>
+        <h5>SOCIAL</h5>
+        <ul class="list-unstyled">
+          <li><a href="https://www.facebook.com/stlouisvhs" target="_blank" rel="noopener" class="text-decoration-none">Facebook</a></li>
+          <li><a href="https://www.instagram.com/stlouisvhs/" target="_blank" rel="noopener" class="text-decoration-none">Instagram</a></li>
+          <li><a href="https://www.youtube.com/channel/UCjtqmGbV2ywRxDXHJeIuKqA" target="_blank" rel="noopener" class="text-decoration-none">Youtube</a></li>
+          <li><a href="https://open.spotify.com/show/6daO9PeaRFD1bmtzQ7dcvV?si=Z5p_UrYUSr68UC7QzSu6Hg&nd=1" target="_blank" rel="noopener" class="text-decoration-none">Spotify</a></li>
+          <li><a href="https://www.tiktok.com/@stlouisvhs" target="_blank" rel="noopener" class="text-decoration-none">TikTok</a></li>
+          <li><a href="https://twitter.com/stlouisvhs" target="_blank" rel="noopener" class="text-decoration-none">Twitter</a></li>
+        </ul>
+      </div>
+    </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
     <script src="/assets/script.js"></script>
