--- a/index.html
+++ b/index.html
@@ -4,56 +4,14 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title id="title-web">Title Web</title>
+    <script src="/assets/include.js"></script>
     <link rel="stylesheet" href="/assets/style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
   </head>
   <body class="bg-dark" data-bs-theme="dark">
-    <div class="fixed-top">
-      <!-- navbar -->
-      <nav class="navbar navbar-expand-lg bg-body-tertiary navbar-dark">
-        <div class="container-fluid">
 
-          <!-- logo -->
-          <a class="navbar-brand" href="/">
-            <img src="/assets/favicon.png" class="object-fit-contain object-position-center" style="height: 100%;" alt="Logo" width="30" height="24">
-            <span class="navbar-brand ms-2">SMK Katolik St Louis</span>
-          </a>
-
-          <!-- mobile view -->
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-
-          <!-- default menu -->
-          <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-              <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="/">Home</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="/info/">Info</a>
-              </li>
-              <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                  Hiburan
-                </a>
-                <ul class="dropdown-menu dropdown-menu-end">
-                  <li><a class="dropdown-item h4 m-0" href="/anime">Anime</a></li>
-                  <li><a class="dropdown-item" href="/anime/darling-in-the-franxx/">Darling In The FranXX</a></li>
-                  <li><a class="dropdown-item" href="/anime/spy-x-family/">Spy × Family</a></li>
-                  <!-- <li><hr class="dropdown-divider"></li> -->
-                  <!-- <li><a class="dropdown-item" href="#">Something else here</a></li> -->
-                </ul>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="/tentang/">Tentang</a>
-              </li>
-            </ul>
-          </div>
-        </div>
-      </nav>
-    </div>
+    <div include="/navbar.html"></div>
 
     <div class="container-fluid d-flex justify-content-center align-items-center flex-column" style="height: 90vh;background: linear-gradient(rgba(var(--preset-dark-rgb),0.5),rgba(var(--preset-dark-rgb),0.5)),var(--background-header);background-repeat: no-repeat;background-position: center;background-size: cover;">
       <h1 class="text-white text-center">SMK Katolik St. Louis Surabaya</h1>
@@ -105,32 +63,12 @@
       </ol>
     </div>
 
-    <footer class="container-fluid d-flex flex-wrap justify-content-around px-3 py-4 bg-body-secondary">
-      <div>
-        <h5>KONSENTRASI KEAHLIAN</h5>
-        <ul class="list-unstyled">
-          <li><a href="https://smkstlouis.sch.id/program-studi/tkjsinlui" target="_blank" rel="noopener" class="text-decoration-none">TKJ - Teknik Komputer Jaringan</a></li>
-          <li><a href="https://smkstlouis.sch.id/program-studi/multimedia/" target="_blank" rel="noopener" class="text-decoration-none">DKV - Desain Komunikasi Visual</a></li>
-          <li><a href="https://smkstlouis.sch.id/program-studi/teknik-audio-video/" target="_blank" rel="noopener" class="text-decoration-none">TAV - Teknik Audio Video</a></li>
-          <li><a href="https://smkstlouis.sch.id/program-studi/teknik-pemesinan/" target="_blank" rel="noopener" class="text-decoration-none">TPM - Teknik Pemesinan</a></li>
-          <li><a href="https://smkstlouis.sch.id/program-studi/teknik-kendaraan-ringan/" target="_blank" rel="noopener" class="text-decoration-none">TKR - Teknik Kendaraan Ringan</a></li>
-          <li><a href="https://smkstlouis.sch.id/program-studi/teknik-bisnis-sepeda-motor/" target="_blank" rel="noopener" class="text-decoration-none">TSM - Teknik Sepeda Motor</a></li>
-        </ul>
-      </div>
-      <div>
-        <h5>SOCIAL</h5>
-        <ul class="list-unstyled">
-          <li><a href="https://www.facebook.com/stlouisvhs" target="_blank" rel="noopener" class="text-decoration-none">Facebook</a></li>
-          <li><a href="https://www.instagram.com/stlouisvhs/" target="_blank" rel="noopener" class="text-decoration-none">Instagram</a></li>
-          <li><a href="https://www.youtube.com/channel/UCjtqmGbV2ywRxDXHJeIuKqA" target="_blank" rel="noopener" class="text-decoration-none">Youtube</a></li>
-          <li><a href="https://open.spotify.com/show/6daO9PeaRFD1bmtzQ7dcvV?si=Z5p_UrYUSr68UC7QzSu6Hg&nd=1" target="_blank" rel="noopener" class="text-decoration-none">Spotify</a></li>
-          <li><a href="https://www.tiktok.com/@stlouisvhs" target="_blank" rel="noopener" class="text-decoration-none">TikTok</a></li>
-          <li><a href="https://twitter.com/stlouisvhs" target="_blank" rel="noopener" class="text-decoration-none">Twitter</a></li>
-        </ul>
-      </div>
-    </footer>
+    <div include="/footer.html"></div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
     <script src="/assets/script.js"></script>
+    <script>
+      includeHTML();
+    </script>
   </body>
 </html>
