--- a/tentang/index.html
+++ b/tentang/index.html
@@ -4,25 +4,15 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title id="title-web">Title Web</title>
+    <script src="/assets/include.js"></script>
     <link rel="stylesheet" href="/assets/style.css">
     <link rel="stylesheet" href="./assets/style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
   </head>
   <body class="bg-dark" data-bs-theme="dark">
-    <div class="fixed-top">
-      <!-- navbar -->
-      <nav class="navbar navbar-expand-lg bg-body-tertiary navbar-dark">
-        <div class="container-fluid d-flex justify-content-center">
-          <!-- logo -->
-          <a class="navbar-brand" href="/">
-            <img src="/assets/favicon.png" class="object-fit-contain object-position-center" style="height: 100%;" alt="Logo" width="30" height="24">
-            <span class="navbar-brand ms-4">SMK Katolik St Louis</span>
-            <img src="/assets/osis.png" class="object-fit-contain object-position-center" style="height: 100%;" alt="Logo" width="30" height="24">
-          </a>
-        </div>
-      </nav>
-    </div>
+
+    <div include="/navbar.html"></div>
 
     <div class="container-fluid d-flex justify-content-center align-items-center flex-column" style="height: 90vh;background: linear-gradient(rgba(var(--preset-dark-rgb),0.5),rgba(var(--preset-dark-rgb),0.5)),url(/assets/bg-tentang.jpg);background-repeat: no-repeat;background-position: center;background-size: cover;">
       <h1 class="text-white text-center">TENTANG KAMI</h1>
@@ -51,8 +41,12 @@
 
     </div>
 
+    <div include="/footer.html"></div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
     <script src="/assets/script.js"></script>
+    <script>
+      includeHTML();
+    </script>
   </body>
 </html>
